<resources>
    <string name="app_name">matOS GIS Application</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="test">TEST</string>
    <string name="title_activity_test">Test Activity</string>

    <string name="mn_pengukuran">Pengukuran</string>
    <string name="mn_pencarian">Pencarian</string>
    <string name="mn_ambil_data">Ambil Data</string>
    <string name="mn_inspeksi">Inspeksi</string>
    <string name="mn_logout">Logout</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="nama_layer">Nama Layer</string>
    <string name="onoff">On / Off</string>
    <string name="back">Kembali</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="uname">ID Pengguna</string>
    <string name="passwd">Kata Kunci</string>
    <string name="login">Login</string>
    <string name="logout">Keluar</string>
    <string name="online">Online</string>
    <string name="or_1">atau</string>
    <string name="or_2">----- atau -----</string>
    <string name="laporan_masyarakat">Laporan Masyarakat</string>

    <string name="title">Judul</string>
    <string name="label">Label</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude_abbr">Long: </string>
    <string name="latitude_abbr">Lat: </string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="info">Info</string>
    <string name="processing">Sedang proses...</string>
    <string name="not_found">Data tidak ditemukan</string>
</resources>
