<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label"/>

    <LinearLayout
        android:id="@+id/linAttr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/windowBackground"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/longitude_abbr"/>

        <TextView
            android:id="@+id/tvLong"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="     "/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/latitude_abbr"/>

        <TextView
            android:id="@+id/tvLat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="     "/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/simpan"/>

        <Button
            android:id="@+id/btnBatal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/batal"/>

    </LinearLayout>

</LinearLayout>